--- a/ohmyfood/index.html
+++ b/ohmyfood/index.html
@@ -73,7 +73,7 @@
               target="_blank"
             >
               <img
-                src="/styles/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                src="./styles/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="plat du menu du restaurant la palette du goût"
                 class="card__img"
               />
@@ -100,7 +100,7 @@
               target="_blank"
             >
               <img
-                src="/styles/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                src="./styles/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="plat du menu du restaurant la note enchantée"
                 class="card__img"
               />
@@ -123,7 +123,7 @@
 
             <a class="card" href="./menu/a-la-francaise.html" target="_blank">
               <img
-                src="/styles/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                src="./styles/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="plat du menu du restaurant à la francaise"
                 class="card__img"
               />
@@ -149,7 +149,7 @@
               target="_blank"
             >
               <img
-                src="/styles/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                src="./styles/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="plat du menu du restaurant les délices des sens"
                 class="card__img"
               />
@@ -177,23 +177,23 @@
     <footer class="footer">
       <div class="container">
         <span class="footer__logo">ohmyfood</span>
-        <ul class="footer__list">
-          <li class="footer__listElement">
+        <ul class="footer__items">
+          <li class="footer__items__item">
             <a class="footer__link" href="#"
               ><i class="footer__icon fas fa-utensils"></i>Proposer un
               restaurant</a
             >
           </li>
-          <li class="footer__listElement">
+          <li class="footer__items__item">
             <a class="footer__link" href="#"
               ><i class="footer__icon fas fa-hands-helping"></i>Devenir
               partenaire</a
             >
           </li>
-          <li class="footer__listElement">
+          <li class="footer__items__item">
             <a class="footer__link" href="#">Mentions légales</a>
           </li>
-          <li class="footer__listElemet">
+          <li class="footer__items__item">
             <a class="footer__link" href="mailto:contact@ohmyfood.com"
               >Contact</a
             >
