--- a/ohmyfood/index.html
+++ b/ohmyfood/index.html
@@ -19,6 +19,8 @@
   </head>
 
   <body>
+    <!--loader-->
+    <div class="loader"></div>
     <!-- Header et titre de la page -->
     <header class="header">
       <h1 class="header__logo">ohmyfood</h1>
