--- a/ohmyfood/index.html
+++ b/ohmyfood/index.html
@@ -20,7 +20,9 @@
 
   <body>
     <!--loader-->
-    <div class="loader"></div>
+    <div id="loader-block" class="loaderWrap">
+      <div class="loader"></div>
+    </div>
     <!-- Header et titre de la page -->
     <header class="header">
       <h1 class="header__logo">ohmyfood</h1>
