fix display menu item card

--- a/ohmyfood/index.html
+++ b/ohmyfood/index.html
@@ -87,13 +87,27 @@
                   <h3 class="card__title">La palette du goût</h3>
                   <span class="card__subtitle">Ménilmontant</span>
                 </div>
-                <div class="menu__btn card__btn">
-                  <i
-                    class="card__like menu__like menu__like--noBg far fa-heart fa-2x"
-                  ></i>
-                  <i
-                    class="card__like menu__like menu__like--bg fas fa-heart fa-2x"
-                  ></i>
+                <div class="icon">
+                  <svg
+                    class="heart-main"
+                    viewBox="0 0 512 512"
+                    width="30"
+                    title="heart"
+                  >
+                    <path
+                      d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+                    />
+                  </svg>
+                  <svg
+                    class="heart-background"
+                    viewBox="0 0 512 512"
+                    width="30"
+                    title="heart"
+                  >
+                    <path
+                      d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+                    />
+                  </svg>
                 </div>
               </div>
             </a>
@@ -114,13 +128,27 @@
                   <h3 class="card__title">La note enchantée</h3>
                   <span class="card__subtitle">Charonne</span>
                 </div>
-                <div class="menu__btn card__btn">
-                  <i
-                    class="card__like menu__like menu__like--noBg far fa-heart fa-2x"
-                  ></i>
-                  <i
-                    class="card__like menu__like menu__like--bg fas fa-heart fa-2x"
-                  ></i>
+                <div class="icon">
+                  <svg
+                    class="heart-main"
+                    viewBox="0 0 512 512"
+                    width="30"
+                    title="heart"
+                  >
+                    <path
+                      d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+                    />
+                  </svg>
+                  <svg
+                    class="heart-background"
+                    viewBox="0 0 512 512"
+                    width="30"
+                    title="heart"
+                  >
+                    <path
+                      d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+                    />
+                  </svg>
                 </div>
               </div>
             </a>
@@ -136,13 +164,27 @@
                   <h3 class="card__title">À la française</h3>
                   <span class="card__subtitle">Cité Rouge</span>
                 </div>
-                <div class="menu__btn card__btn">
-                  <i
-                    class="card__like menu__like menu__like--noBg far fa-heart fa-2x"
-                  ></i>
-                  <i
-                    class="card__like menu__like menu__like--bg fas fa-heart fa-2x"
-                  ></i>
+                <div class="icon">
+                  <svg
+                    class="heart-main"
+                    viewBox="0 0 512 512"
+                    width="30"
+                    title="heart"
+                  >
+                    <path
+                      d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+                    />
+                  </svg>
+                  <svg
+                    class="heart-background"
+                    viewBox="0 0 512 512"
+                    width="30"
+                    title="heart"
+                  >
+                    <path
+                      d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+                    />
+                  </svg>
                 </div>
               </div>
             </a>
@@ -162,13 +204,27 @@
                   <h3 class="card__title">Le délice des sens</h3>
                   <span class="card__subtitle">Folie-Méricourt</span>
                 </div>
-                <div class="menu__btn card__btn">
-                  <i
-                    class="card__like menu__like menu__like--noBg far fa-heart fa-2x"
-                  ></i>
-                  <i
-                    class="card__like menu__like menu__like--bg fas fa-heart fa-2x"
-                  ></i>
+                <div class="icon">
+                  <svg
+                    class="heart-main"
+                    viewBox="0 0 512 512"
+                    width="30"
+                    title="heart"
+                  >
+                    <path
+                      d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+                    />
+                  </svg>
+                  <svg
+                    class="heart-background"
+                    viewBox="0 0 512 512"
+                    width="30"
+                    title="heart"
+                  >
+                    <path
+                      d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+                    />
+                  </svg>
                 </div>
               </div>
             </a>
