refactor code and use more nesting

--- a/ohmyfood/index.html
+++ b/ohmyfood/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <!-- Section Location -->
-    <main>
+    <main id="wrap-hp">
       <section class="location">
         <i class="fas fa-map-marker-alt location__icon"></i>
         <h2 class="location__text">Paris, Belleville</h2>
@@ -41,7 +41,7 @@
         <p class="about__subtitle">
           Découvrez des restaurants d'exception, séléctionnés par nos soins
         </p>
-        <a class="about__btn"> Explorer nos restaurants </a>
+        <a class="btn__component"> Explorer nos restaurants </a>
       </section>
 
       <!-- Section Steps -->
@@ -87,7 +87,7 @@
                   <h3 class="card__title">La palette du goût</h3>
                   <span class="card__subtitle">Ménilmontant</span>
                 </div>
-                <div class="icon">
+                <div class="heart__icon">
                   <svg
                     class="heart-main"
                     viewBox="0 0 512 512"
@@ -128,7 +128,7 @@
                   <h3 class="card__title">La note enchantée</h3>
                   <span class="card__subtitle">Charonne</span>
                 </div>
-                <div class="icon">
+                <div class="heart__icon">
                   <svg
                     class="heart-main"
                     viewBox="0 0 512 512"
@@ -164,7 +164,7 @@
                   <h3 class="card__title">À la française</h3>
                   <span class="card__subtitle">Cité Rouge</span>
                 </div>
-                <div class="icon">
+                <div class="heart__icon">
                   <svg
                     class="heart-main"
                     viewBox="0 0 512 512"
@@ -204,7 +204,7 @@
                   <h3 class="card__title">Le délice des sens</h3>
                   <span class="card__subtitle">Folie-Méricourt</span>
                 </div>
-                <div class="icon">
+                <div class="heart__icon">
                   <svg
                     class="heart-main"
                     viewBox="0 0 512 512"
