--- a/ohmyfood/menu/a-la-francaise.html
+++ b/ohmyfood/menu/a-la-francaise.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <header class="header--pourmenupage">
+    <header class="header header--pourmenupage">
       <div class="restaurantContainer">
         <a href="../index.html"
           ><i class="fas fa-arrow-left header__previous"></i
@@ -37,7 +37,7 @@
       <div class="menu__header__wraper">
         <div class="menu__header">
           <h2 class="menu__title">A la française</h2>
-          <div class="icon">
+          <div class="heart__icon">
             <svg
               class="heart-main"
               viewBox="0 0 512 512"
@@ -197,7 +197,7 @@
       </div>
 
       <div class="wrapBtn">
-        <button class="commandBtn">Commander</button>
+        <a class="btn__component"> Commmander </a>
       </div>
     </main>
 
