--- a/ohmyfood/menu/le-delice-des-sens.html
+++ b/ohmyfood/menu/le-delice-des-sens.html
@@ -37,7 +37,7 @@
       <div class="menu__header__wraper">
         <div class="menu__header">
           <h2 class="menu__title">Le délice des sens</h2>
-          <div class="icon">
+          <div class="heart__icon">
             <svg
               class="heart-main"
               viewBox="0 0 512 512"
@@ -195,7 +195,7 @@
       </div>
 
       <div class="wrapBtn">
-        <button class="commandBtn">Commander</button>
+        <a class="btn__component"> Commmander </a>
       </div>
     </main>
     <footer class="footer">
