--- a/ohmyfood/menu/la-note-enchantee.html
+++ b/ohmyfood/menu/la-note-enchantee.html
@@ -33,12 +33,12 @@
       class="RestaurantImg"
     />
 
-    <main class="menu container">
+    <main class="menu container" id="menu-wrap">
       <div class="menu__header__wraper">
         <div class="menu__header">
           <h2 class="menu__title">La note enchantée</h2>
 
-          <div class="icon">
+          <div class="heart__icon">
             <svg
               class="heart-main"
               viewBox="0 0 512 512"
@@ -109,7 +109,7 @@
             </div>
           </section>
 
-          <section class="menuItem delay-2">
+          <section class="menuItem delay-3">
             <header class="menuItem__header">
               <h4 class="menuItem__title">Foie gras de canard cuit entier</h4>
               <p class="menuItem__description">
@@ -127,7 +127,7 @@
 
         <section class="submenu">
           <h3 class="submenu__title">Plats</h3>
-          <section class="menuItem delay-3">
+          <section class="menuItem delay-4">
             <header class="menuItem__header">
               <h4 class="menuItem__title">Noix de coquilles Saint-Jacques</h4>
               <p class="menuItem__description">
@@ -142,7 +142,7 @@
             </div>
           </section>
 
-          <section class="menuItem delay-4">
+          <section class="menuItem delay-5">
             <header class="menuItem__header">
               <h4 class="menuItem__title">Langoustine poêlée</h4>
               <p class="menuItem__description">Purée de patate douce</p>
@@ -155,7 +155,7 @@
             </div>
           </section>
 
-          <section class="menuItem delay-5">
+          <section class="menuItem delay-6">
             <header class="menuItem__header">
               <h4 class="menuItem__title">Mijoté de queue de boeuf</h4>
               <p class="menuItem__description">
@@ -173,7 +173,7 @@
 
         <section class="submenu">
           <h3 class="submenu__title">Desserts</h3>
-          <section class="menuItem delay-6">
+          <section class="menuItem delay-7">
             <header class="menuItem__header">
               <h4 class="menuItem__title">Macaron noisette et chocolat</h4>
               <p class="menuItem__description">
@@ -188,7 +188,7 @@
             </div>
           </section>
 
-          <section class="menuItem delay-7">
+          <section class="menuItem delay-8">
             <header class="menuItem__header">
               <h4 class="menuItem__title">Baba au rhum revisité</h4>
               <p class="menuItem__description">Avec son coulis de citron</p>
@@ -201,7 +201,7 @@
             </div>
           </section>
 
-          <section class="menuItem delay-8">
+          <section class="menuItem delay-9">
             <header class="menuItem__header">
               <h4 class="menuItem__title">Tarte au citron meringuée</h4>
               <p class="menuItem__description">Destructurée</p>
@@ -215,9 +215,8 @@
           </section>
         </section>
       </div>
-
       <div class="wrapBtn">
-        <button class="commandBtn">Commander</button>
+        <a class="btn__component"> Commmander </a>
       </div>
     </main>
     <footer class="footer">
