--- a/ohmyfood/menu/la-palette-du-gout.html
+++ b/ohmyfood/menu/la-palette-du-gout.html
@@ -207,7 +207,7 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="footer__container">
         <span class="footer__logo">ohmyfood</span>
         <ul class="footer__items">
           <li class="footer__items__item">
