--- a/ohmyfood/menu/le-delice-des-sens.html
+++ b/ohmyfood/menu/le-delice-des-sens.html
@@ -199,7 +199,7 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="footer__container">
         <span class="footer__logo">ohmyfood</span>
         <ul class="footer__items">
           <li class="footer__items__item">
