--- a/ohmyfood/index.html
+++ b/ohmyfood/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
     <script
@@ -92,7 +92,8 @@
                     class="heart-main"
                     viewBox="0 0 512 512"
                     width="30"
-                    title="heart"
+                    aria-label="heart"
+                    role="img"
                   >
                     <path
                       d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
@@ -102,7 +103,8 @@
                     class="heart-background"
                     viewBox="0 0 512 512"
                     width="30"
-                    title="heart"
+                    aria-label="heart"
+                    role="img"
                   >
                     <path
                       d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
@@ -133,7 +135,8 @@
                     class="heart-main"
                     viewBox="0 0 512 512"
                     width="30"
-                    title="heart"
+                    aria-label="heart"
+                    role="img"
                   >
                     <path
                       d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
@@ -143,7 +146,8 @@
                     class="heart-background"
                     viewBox="0 0 512 512"
                     width="30"
-                    title="heart"
+                    aria-label="heart"
+                    role="img"
                   >
                     <path
                       d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
@@ -169,7 +173,8 @@
                     class="heart-main"
                     viewBox="0 0 512 512"
                     width="30"
-                    title="heart"
+                    aria-label="heart"
+                    role="img"
                   >
                     <path
                       d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
@@ -179,7 +184,8 @@
                     class="heart-background"
                     viewBox="0 0 512 512"
                     width="30"
-                    title="heart"
+                    aria-label="heart"
+                    role="img"
                   >
                     <path
                       d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
@@ -209,7 +215,8 @@
                     class="heart-main"
                     viewBox="0 0 512 512"
                     width="30"
-                    title="heart"
+                    aria-label="heart"
+                    role="img"
                   >
                     <path
                       d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
@@ -219,7 +226,8 @@
                     class="heart-background"
                     viewBox="0 0 512 512"
                     width="30"
-                    title="heart"
+                    aria-label="heart"
+                    role="img"
                   >
                     <path
                       d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
