add ancor to homepage btn and link to menupage

--- a/ohmyfood/index.html
+++ b/ohmyfood/index.html
@@ -41,7 +41,9 @@
         <p class="about__subtitle">
           Découvrez des restaurants d'exception, séléctionnés par nos soins
         </p>
-        <a class="btn__component"> Explorer nos restaurants </a>
+        <a href="#restaurants" class="btn__component">
+          Explorer nos restaurants
+        </a>
       </section>
 
       <!-- Section Steps -->
