--- a/ohmyfood/menu/a-la-francaise.html
+++ b/ohmyfood/menu/a-la-francaise.html
@@ -199,7 +199,7 @@
       </div>
 
       <div class="wrapBtn">
-        <a class="btn__component"> Commmander </a>
+        <a href="#" class="btn__component"> Commmander </a>
       </div>
     </main>
 
