--- a/ohmyfood/menu/la-note-enchantee.html
+++ b/ohmyfood/menu/la-note-enchantee.html
@@ -218,7 +218,7 @@
         </section>
       </div>
       <div class="wrapBtn">
-        <a class="btn__component"> Commmander </a>
+        <a href="#" class="btn__component"> Commmander </a>
       </div>
     </main>
     <footer class="footer">
