--- a/ohmyfood/menu/le-delice-des-sens.html
+++ b/ohmyfood/menu/le-delice-des-sens.html
@@ -197,7 +197,7 @@
       </div>
 
       <div class="wrapBtn">
-        <a class="btn__component"> Commmander </a>
+        <a href="#" class="btn__component"> Commmander </a>
       </div>
     </main>
     <footer class="footer">
