fix coquille titre btn menu

--- a/ohmyfood/menu/la-palette-du-gout.html
+++ b/ohmyfood/menu/la-palette-du-gout.html
@@ -205,7 +205,7 @@
       </div>
 
       <div class="wrapBtn">
-        <a href="#" class="btn__component"> Commmander </a>
+        <a href="#" class="btn__component"> Commander </a>
       </div>
     </main>
     <footer class="footer">
